# zotero-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_client_arxiv.py  test_export.py  test_lookup.py
zotero_bridge/: __init__.py  client.py  dblp.py  export.py  export_cli.py  ingest.py  lookup.py
