[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotero-bridge"
version = "0.1.0"
description = "Python SDK for Zotero debug-bridge"
readme = "zotero_bridge/README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "zotero-bridge contributors" },
]
keywords = ["zotero", "bibliography", "reference-manager", "debug-bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[project.scripts]
zotero-ingest = "zotero_bridge.ingest:main"

[project.urls]
Homepage = "https://github.com/zotero-bridge/zotero-bridge"
Repository = "https://github.com/zotero-bridge/zotero-bridge"

[tool.hatch.build.targets.wheel]
packages = ["zotero_bridge"]

[tool.hatch.build.targets.sdist]
include = [
    "/zotero_bridge",
    "/README.md",
    "/pyproject.toml",
]
